Added styling to the input fields

--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
                         <div class="whiteBackground">
                             <form>
                                 <div class="formStyle">
-                                        <label for="email" class="floatLeft">Email</label>
-                                        <input type="email" /><br /><br />
-                                        <label for="password" class="floatLeft">Password</label>
-                                        <input type="password" /><br /><br />
+                                    <div class="styled-input">
+                                        <input type="text" required />
+                                        <label>Email</label>
+                                        <!-- <span></span>  -->
+                                    </div>
+                                    <div class="styled-input">
+                                        <input type="text" required />
+                                        <label>Password</label>
+                                        <!-- <span></span>  -->
+                                    </div>
                                         <button type="button"
                                             class="navbarBackground blueButton">LOGIN</button>
                                 </div>
